@@ -10,7 +10,6 @@ details. */
 
 #include "winsup.h"
 #include <stdarg.h>
-#include <string.h>
 #include <stdlib.h>
 #include <ctype.h>
 #include <windows.h>
